# FULLSEND

./: .env.example  .gitignore  .mcp.json  README.md  SYSTEM_COMPONENTS.md  check_redis_blocked.py  check_redis_doable.py  dashboard_api.py  demo_viz.html  fetch_wandb_runs.py  pyproject.toml  run_demo.py  run_roundtable.sh  verify_orchestrator_queue.py
RALPH/: STATUS.md  TASKS.md  TASKS_BROWSERBASE_TOOL.md  TASKS_BUILDER.md  TASKS_EXECUTOR.md  TASKS_FULLSEND.md  TASKS_INTEGRATION_REVIEW.md  TASKS_ORCHESTRATOR.md  TASKS_REDIS_AGENT.md  TASKS_ROUNDTABLE.md  TASKS_WATCHER.md  ralph2.sh
RALPH/builder_output/: tool_hubspotcontactcreator.json
context/: product_context.md
database/: README.md  qr_batch_helper.py
database/migrations/: 001_create_qr_batch_table.sql  002_qr_batch_examples.sql
docs/: BUILD_PLAN.md  CC_in_Discord  SYSTEM_PROMPTS.md  claude_code_mcp_setup.md  demo_logs_and_mermaid_viz_plan.md  rabbitmq.md  redis_and_queues_schema.md
scripts/: register_ralph_tools.py  verify_redis_tools.py
services/: __init__.py  builder_queue.py  builder_stub.py  clear_demo_state.py  hash_service.py  orchestrator_queue.py  requeue_blocked.py
services/watcher/: __init__.py  classifier.py  config.py  escalator.py  main.py  pyproject.toml  responder.py  retry.py
services/watcher/prompts/: classify.txt  respond.txt
services/watcher/tests/: __init__.py  conftest.py  test_classifier.py  test_escalator.py  test_integration.py  test_responder.py  test_retry.py
tools/: __init__.py  browserbase.py  email_sender.py  job_posting_finder.py  register.py  test_hello_world.py
(+125 files in other folders)
